...
                            shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(14)),
                          ),
                          icon: const Icon(Icons.person_outline,
                              size: 20, color: Colors.white54),
                          label: const Text(
                            'Continue as Guest',
                            style: TextStyle(
                                fontSize: 14,
                                fontWeight: FontWeight.w500,
                                color: Colors.white54),
                          ),
                        ),
...
